--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
         <h1>LATEST NEWS</h1>
       </div>
 
+      <script src="https://kit.fontawesome.com/e43337aa62.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
