--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -26,17 +30,17 @@
         <img src="./assest/medicare-logo-color.png" alt="">
       </div>
       <div class="col-md-3">
-        <i class="fas fa-clock fa-5x"></i>
+        <i class="fas fa-clock fa-3x"></i>
         <p>Monday - Friday 08:00-19:00 <br>
           Saturday and Sunday - CLOSED</p>
       </div>
       <div class="col-md-3">
-        <i class="fas fa-mobile-android-alt fa-4x"></i>
+        <i class="fas fa-mobile-android-alt fa-3x"></i>
         <p>+0800 2336 7811 <br>
           Office@Medicare.com</p>
       </div>
       <div class="col-md-3">
-        <i class="fas fa-map-marker-alt fa-5x"></i>
+        <i class="fas fa-map-marker-alt fa-3x"></i>
         <p>27th Avenue <br>
           New York, W2 3XE</p>
       </div>
@@ -243,6 +247,139 @@
       <div class="container text-center mt-5">
         <h1>LATEST NEWS</h1>
       </div>
+
+      <section id="footer-section" class="py-5 text-white">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-lg-3">
+                    <img src="img/medicare-logo-white.png" alt="" class="img-fluid">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsa sequi rem velit iste nesciunt consequatur dicta est fugiat totam ipsum enim nihil in reprehenderit temporibus, ea ex aperiam corporis?
+                </div>
+                <div class="col-lg-3">
+                    <h3>Recents Post</h3>
+                    <div class="d-flex mb-3">
+                        <div class="align-self-start pt-2">
+                            <img  src="img/shutterstock_157746134-160x160.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="align-self-end ml-3">
+                            <small class="text-muted"> October 18, 2015</small>
+                            <a href="#">
+                                <p>2015 Best USA HOspital and Clinics</p>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="d-flex">
+                        <div class="align-self-start pt-2">
+                            <img src="img/shutterstock_159016388-160x160.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="align-self-end ml-3">
+                            <small class="text-muted"> October 15, 2016</small>
+                            <a href="#">
+                                <p>Are Drugs The Best Solutions</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <h3>Products</h3>
+                    <div class="d-flex mb-3">
+                        <div class="align-self-start">
+                            <img src="img/poster_5_up.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="align-self-end">
+                            <h6>Waiting Room Chairs</h6>
+                            <small class="text-muted">$15:00</small>
+                        </div>
+                    </div>
+
+                    <div class="d-flex mb-3">
+                        <div class="align-self-start">
+                            <img src="img/poster_4_up.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="align-self-end">
+                            <h6>Waiting Room Chairs</h6>
+                            <small class="text-muted">$15:00</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <h3>Our Services</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis delectus placeat consequuntur mollitia commodi, ipsum dicta a accusamus voluptatibus perferendis nobis hic laboriosam provident aperiam error ex maxime? Aut, tenetur.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- FOOTER -->
+    <!-- <footer id="main-footer bg-secondary">
+        <div class="container">
+                <a href="#" class="nav-brand">
+                    Copyright by BoldThemes <span id="year"></span>. All rights reserved.
+                </a>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Working Hours</a>
+                    </li>
+                </ul> -->
+        <!-- </div> -->
+                <nav class=" navbar navbar-expand-sm text-white" style="background-color:#2E3037;">
+                    <div class="container">
+                        <h4 href="#" class="nav-brand">
+                            Copyright by BoldThemes <span id="year"></span>. All rights reserved.
+                        </h4>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">ABOUT US</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">SERVICES</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">CONTACT US</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">WORKING HOURS</a>
+                            </li>
+                            
+                        </ul>
+                        <div class="d-flex justify-content-center">
+                            <div class="p-4">
+                                <a href="#">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-twiter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </div>
+                            <div class="p-4"></div>
+                            <div class="p-4"></div>
+                        </div>
+                        
+                    </div>
+                </nav>
+
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+<script>
+    $('#year').text(new date().getfullyear());
+</script>
 
       <script src="https://kit.fontawesome.com/e43337aa62.js" crossorigin="anonymous"></script>
 
